--- a/index.html
+++ b/index.html
@@ -1,13 +1,28 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <title>Effective JavaScript: Frogger</title>
+    <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
+
+    <div class="score-container">
+        <p class="score">score :
+            <span class="score-num"> 0</span> | </p>
+        <p class="level">level :
+            <span class="level-num"> 0</span> | </p>
+        <p class="lives">lives :
+            <span class="lives-num"> x3</span>
+        </p>
+    </div>
+
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
 </body>
+
 </html>
